# multi_robot_explore_testbed

./: LICENSE  README.md
multi_robot_explore/: package.xml  setup.cfg  setup.py
multi_robot_explore/launch/: multi_robot_explore.launch.py  multi_robot_explore_real_robot.launch.py  multi_robot_explore_real_robot_test_navigation.launch.py  multi_robot_explore_simple.launch.py  multi_robot_explore_swarm_simulation.launch.py  real_multi_robot_explore_simple.launch.py
multi_robot_explore/multi_robot_explore/: explore_util.py  get_map_value_node.py  get_robot_pose_from_tf.py  group_coordinator.py  map_encode_publisher.py  map_frontier_merger.py  multi_explore_node.py  multi_explore_simple_node temp.py  multi_explore_simple_node.py  multi_explore_simple_node_plan_2.py  multi_explore_swarm_simulation_node.py  peer_interface_node.py  robot_map_node.py  robot_registry_node.py  robot_track_publish_node.py  test.py  window_WFD.py
multi_robot_explore/param/: .real_multi_robot_simple_params.yaml.swp  get_map_value_params.yaml  get_map_value_real_robot_params.yaml  local_robot_non_ros_params.yaml  multi_robot_params.yaml  multi_robot_simple_test_navigation_params.yaml  multi_robot_swarm_simulation_params.yaml  real_multi_robot_simple_params.yaml  robot_track_publish_params.yaml  robot_track_publish_real_robot_params.yaml
multi_robot_explore_cpp/: CMakeLists.txt  package.xml
multi_robot_explore_cpp/include/multi_robot_explore_cpp/: explore_util.hpp  get_map_value_node.hpp  group_coordinator.hpp  group_coordinator_node.hpp  map_frontier_merger.hpp  multi_explore_node.hpp  robot_control_interface.hpp  wfd_action_server_node.hpp  wfd_detector.hpp  wfd_service_server_node.hpp
multi_robot_explore_cpp/launch/: .multi_robot_explore_real_env.launch.py.swp  multi_robot_explore.launch.py  multi_robot_explore_real_env.launch.py  multi_robot_explore_swarm_simulation.launch.py
multi_robot_explore_cpp/param/: group_coordinator_real_robot_params.yaml  multi_robot_params.yaml  multi_robot_swarm_simulation_params.yaml  wfd_service_params.yaml  wfd_service_real_robot_params.yaml
multi_robot_explore_cpp/src/: explore_util.cpp  get_map_value_node.cpp  group_coordinator.cpp  group_coordinator_node temp.cpp  group_coordinator_node.cpp  group_coordinator_node_plan_2.cpp  map_frontier_merger.cpp  multi_explore_node.cpp  robot_control_interface.cpp  test.cpp  wfd_action_server_node.cpp  wfd_detector.cpp  wfd_service_server_node.cpp
multi_robot_interfaces/: CMakeLists.txt  package.xml
multi_robot_interfaces/action/: GroupCoordinator.action  WfdAction.action
multi_robot_interfaces/msg/: CompressMap.msg  Frontier.msg  RobotPose.msg  RobotRegistry.msg  RobotState.msg  RobotStatePid.msg  RobotTrack.msg  RobotTracks.msg
multi_robot_interfaces/srv/: GetLocalFrontierTargetPt.srv  GetLocalMap.srv  GetLocalMapAndFrontier.srv  GetLocalMapAndFrontierCompress.srv  GetLocalMapAndFrontierCompressCpp.srv  GetPeerMapValueOnCoords.srv  GetPeerRobotPid.srv  GetPeerRobotPose.srv  GetPeerRobotState.srv  GetPeerRobotStatePid.srv  SetRobotTargetPose.srv  WfdService.srv
my_tb3_launcher/: package.xml
my_tb3_launcher/launch/: hlds_laser.launch.py  my_tb3_bringup.launch.py  turtlebot3_state_publisher.launch.py
my_tb3_launcher/param/: waffle_pi.yaml
robot_control_interface/: package.xml  setup.cfg  setup.py
robot_control_interface/robot_control_interface/: .robot_control_node.py.swp  robot_control_node.py
robot_map_encoder_decoder/robot_map_encoder_decoder/: map_encode_publisher.py
robot_spawner_pkg/: package.xml  setup.py
(+1 files in other folders)
